formatando img e mudando tom da navbar

--- a/Projeto-Arquitetura/Projeto-Arquitetura.csproj
+++ b/Projeto-Arquitetura/Projeto-Arquitetura.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Projeto_Arquitetura</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
